--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,19 +31,11 @@ thiserror = "1.0"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
-toml = "0.8"
-
-# Logging
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+serde_yaml = "0.9"
 
 # Path handling
 directories = "5.0"
 pathdiff = "0.2"
-
-# TUI
-ratatui = "0.26"
-crossterm = "0.27"
 
 [dev-dependencies]
 # Testing
