feat: add color-coded output to list command for better readability
Improved list command output with color coding:
- Header (BRANCH, PATH): blue and bold
- Separator line: gray
- Branch names: green
- Paths: yellow

The green and yellow color combination was chosen with accessibility
in mind to be distinguishable for users with color vision diversity.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,9 @@ serde_yaml = "0.9"
 directories = "5.0"
 pathdiff = "0.2"
 
+# Terminal colors
+colored = "2.1"
+
 [dev-dependencies]
 # Testing
 assert_cmd = "2.0"
